--- a/MusicStreamingAPI/MusicStreamingAPI/src/main/resources/application.properties
+++ b/MusicStreamingAPI/MusicStreamingAPI/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/MusicStreaming
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://65.0.139.197:3306/testdatabase
+spring.datasource.username=mg-test-1
+spring.datasource.password=1234
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
